--- a/cpp20_code_examples/CMakeLists.txt
+++ b/cpp20_code_examples/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(cpp20 VERSION 0.1.0)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
+
 set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME}/build)
 add_subdirectory(latches)
+add_subdirectory(bitfields)
+
