--- a/cpp20_code_examples/lambda/CMakeLists.txt
+++ b/cpp20_code_examples/lambda/CMakeLists.txt
@@ -1,4 +1,4 @@
-project (latches)
+project (lamdba)
  
 set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
